<resources>
    <string name="app_name">Heart of the world</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_send">Send</string>
    <string name="welcom">Welcom</string>
    <string name="action_settings">Profile </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Pictures</string>
    <string name="menu_slideshow">حفلات عامة</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About app </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="married_party">حفلات زواج</string>
    <string name="singl_party">حفلات توديع عزوبية</string>
    <string name="grad_party">حفلات تخرج</string>
    <string name="birthday_party">حفلات عيد ميلاد</string>
    <string name="about">
        هل لديك حفله ، مناسبه ، زواج    بأمكانك طلب أي خدمة من خلال تطبيق مناسبات حيث خصص هذا التطبيق  لفهم حاجة عملائنا وما يناسبهم ، مهما كانت طريقة ونمط حياتهم  حيث نفكر معك بأدق التفاصيل من تصميم الحفل والاستقبال والزهور والضيافة والدعوات والتصوير والإضاءة لذلك يمكن الطلب من خلال التطبيق بكل سهولة
    </string>
    <string name="signIn">Sign in</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">password</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="login">login</string>
    <string name="dontHaveAccount">Dont Have Account ?</string>
    <string name="signFromHere">Register from here</string>
    <string name="signUp">Sign Up</string>
    <string name="nameHint">Name</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="sign">sign Up</string>
    <string name="haveAccount">Do you have account?</string>
    <string name="clickHere">Click Here</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="fullNameRequired">Full Name Required !</string>
    <string name="emailRequired">Email Required !</string>
    <string name="passwordRequired">password Required !</string>
    <string name="confirmPasswordRequired">confirm Password Required !</string>
    <string name="confirmPasswordNotMatchesPassword">confirm Password Not Matches Password !</string>
    <string name="phoneRequired">phone Number Required !</string>
    <string name="load_login">Please wait to check data</string>
    <string name="enter__correct_email">Email not correct</string>
    <string name="exist">logout</string>
    <string name="back">Restore Password</string>
    <string name="myRE" />
    <string name="myREQ">طلباتي</string>
    <string name="loginasvistor">Login As Vistor</string>
    <string name="menu_setting">Setting</string>
    <string name="communicate">Communicate</string>
    <string name="Restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="climate">Climate</string>
    <string name="Tourist">Tourist offices</string>
    <string name="milestones">Milestones</string>
    <string name="information">Information</string>
    <string name="numberimportant">Important Numbers</string>
    <string name="caroffices">Car OFFICES and Tourist</string>
    <string name="Chooselang">choose language</string>
    <string name="save">Save</string>
    <string name="arabiclang">Arabic</string>
    <string name="englishlang">English</string>
    <string name="myAccount">My Account</string>
    <string name="language">language</string>
    <string name="home">Home</string>
    <string name="Laws">Laws and Etiquette</string>
    <string name="AlHasa">Al-Hasa</string>
    <string name="AlBaha">Al-Baha</string>
    <string name="Abha">Abha</string>
    <string name="Jazan">Jazan</string>
    <string name="Makkah">Makkah</string>
    <string name="Medina">Medina</string>
    <string name="Dammam">Dammam</string>
    <string name="AlKhober">Al Khober</string>
    <string name="Riyadh">Riyadh</string>
    <string name="Hail">Hail</string>
    <string name="Jeddah">Jeddah</string>
    <string name="Tabuk">Tabuk</string>
    <string name="advices">Travel advice </string>
    <string-array name="city">
        <item>AlHasa</item>
        <item>AlBaha</item>
        <item>Abha</item>
        <item>Jazan</item>
        <item>Makkah</item>
        <item>Medina</item>
        <item>Dammam</item>
        <item>AlKhober</item>
        <item>Riyadh</item>
        <item>Hail</item>
        <item>Jeddah</item>
        <item>Tabuk</item>

    </string-array>
    <string name="climatetext">The Kingdom has a different climate in all parts of the country as the country owns a large area of land, and many geological stages have passed through itover the centuries and centuries. The Kingdom also contains many different terrain, mountain heights,valleys, dunes, plateaus and plains, Saudi Arabia has four distinct seasons and a climate that varies between regions.\n 1- Spring Spring in Saudi Arabia can be brisk, particularly in the north, where the temperature at night can drop to below 15 degrees. The central and southern regions are warmer, averaging around 20 degrees after nightfall. Rainfall is at its highest now, particularly in the central region and in the southwest over the Asir Mountains. \n 2-Summer Summer signals the start of rising temperatures across much of the country, with the exception of the comparatively mild highlands in the southwest. The early mornings and long evenings are more temperate with gentle winds, so take advantage of the warm seas to explore Saudi Arabia’s world-class dive sites, or try your hand at other watersports. \n 3- Autumn Autumn brings gentler weather and cool breezes in both Saudi Arabia’s northern regions and the southwestern highlands. While daytime temperatures remain warm, evenings are mild and perfect for outdoor strolling along Jeddah’s waterfront, indulging in al-fresco dining, or visiting Al Ahsa’s cool desert springs.\n 4-Winter Take advantage of Saudi Arabia’s beautiful winter weather to explore the Kingdom. The balmy days and cool nights are perfect for camping, rock climbing, or just exploring Saudi Arabia’s bustling cities and verdant highlands. You might even be lucky enough to see snowfall in the mountains of the northern regions, blanketing the slopes and desert sands. "</string>
    <string name="informationtext">" Here is a collection of general information about the Kingdom of Saudi Arabia:1-The capital: Riyadh \n 2-The main cities: Jeddah, Makkah Al Mukarramah, Al Madinah Al Munawwarah, Dammam  \n3-The official religion: Islam \n 4-Official language: Arabic, English (commercial) \n 5-Currency: Saudi Riyal \n 6-National Day: September 23   \n 7-Climate: In general, hot dry in summer, cool dry in winter,and the southern regions are characterized by low temperatures  \n 8-The most important exports:oil and petroleum products 90% "</string>
    <string name="numbertext">"Figures of interest to you in the Kingdom of Saudi Arabia We present to you in this article a brochure of the most important numbers that mayinterest you in Saudi Arabia and that will facilitate many of the things we offer you in the services section within your distinguished site How much:  Numbers that may interest you in Saudi Arabia:  \n 1- Security numbers  Police: 999  Accidents (traffic): 993  Ambulance: 997  Amortization: 998  Drug control: 995  Road Security: 996  General Intelligence: 985  2- Problems or inquiries in the telephone services  Inquiries: 905  Malfunctions: 904  International calls: 900  Talking time: 961  Mobile phone: 902  Other queries  Meteorology: 966  Aviation and transportation  Central reservation: 4884444  Airport Information: 2221700  Train traffic: 4489678  Mass transportation: 8001249999 "</string>
    <string name="lawtext">"Public etiquette in Saudi Arabia is informed by our cultural heritage and Islamic religion, and underpinned by values that are familiar to people everywhere: respect for others, decorum in public and protection of privacy.  Public displays of affection are not consistent with local culture and visitors should also avoid using profane language or gestures.  Religion At prayer time, five times a day, music is turned off in public places and many shops close briefly.  For one month a year, during Ramadan, Muslims fast from dawn to dusk and so it is respectful to avoid eating or drinking in public during the day at this time.  Alcohol and Substances The sale, purchase and consumption of alcohol are illegal in Saudi Arabia. It is illegal to bring alcohol or drugs into the country. "</string>
    <string name="addresturant">Add Restaurant</string>
    <string name="addhotle">Add Hotel</string>
    <string name="addmilestone">Add Milestone</string>
    <string name="addsoqaa">Add Soqaa</string>
    <string name="adding_data_for_aplication">Adding Data for Application</string>
    <string name="CHOOSECITY">Choose City</string>
    <string name="ADD">Add</string>
    <string name="hotle_ar_name">Hotel Arabic name</string>
    <string name="hotle_en_name">Hotel English name</string>
    <string name="hotle_en_desc">Hotel English description</string>
    <string name="hotle_link">Hotel link Location</string>
    <string name="hotle_price">Hotel price for night</string>
    <string name="hotle_image">Hotel Link image</string>
    <string name="resturants_en_address">Restaurant english  Address</string>
    <string name="resturants_ar_address">Restaurant Arabic address</string>
    <string name="resturants_phone">Restaurant phone</string>
    <string name="resturants_link">Restaurant link Location</string>
    <string name="resturants_en_desc">Restaurant english  description</string>
    <string name="resturants_en_name">Restaurant English name</string>
    <string name="resturants_ar_name">Restaurant Arabic name</string>
    <string name="resturants_ar_desc">Restaurant Arabic description</string>
    <string name="officenumber">Office Phone Number</string>
    <string name="officeenname">Office English name</string>
    <string name="officearname">Office Arabic name</string>
    <string name="officetypeen">Office English type</string>
    <string name="officetype">Office Arabic  Type</string>
    <string name="addoffice">Add Office</string>
    <string name="hotle_ar_desc">Hotle Arabic description</string>
    <string name="favorite">Favorite Resturants</string>
    <string name="favorite_hotels">Favorite Hotels</string>
</resources>