<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favoritefull"
            android:title="@string/favorite" />

        <item
            android:id="@+id/favorite_hotels"
            android:icon="@drawable/ic_favoritefull"
            android:title="@string/favorite_hotels" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_exitapp"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exist" />
        </menu>
    </item>

</menu>
