<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/addhotle"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/CHOOSECITY" />
    <Spinner
        android:id="@+id/cityname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:entries="@array/city"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/city" />

    <EditText
        android:id="@+id/Hotle_ar_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_editstyle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/hotle_ar_name" />

    <EditText
        android:id="@+id/Hotle_en_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/add_editstyle"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPersonName"
        android:hint="@string/hotle_en_name" />

    <EditText
        android:id="@+id/Hotle_ar_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_editstyle"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hotle_ar_desc" />

    <EditText
        android:id="@+id/Hotle_en__desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_editstyle"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hotle_en_desc" />

    <EditText
        android:id="@+id/Hotle_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_editstyle"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hotle_link" />

    <EditText
        android:id="@+id/Hotle_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_editstyle"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hotle_price" />
    <EditText
        android:id="@+id/Hotle_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_editstyle"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:hint="@string/hotle_image" />



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/addstyle"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ADD" />

</LinearLayout>
</androidx.core.widget.NestedScrollView>
